crates/forge_app/src/snapshots/forge_app__operation__tests__shell_output_empty_streams.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Shell Output

- **Command**: Silent_command
- **Shell**: /bin/bash
- **Exit Code**: 0
