crates/forge_app/src/snapshots/forge_app__operation__tests__shell_output_exact_boundary_stdout.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Shell Output

- **Command**: Boundary_command
- **Shell**: /bin/bash
- **Exit Code**: 0

## Stdout

- **Total Lines**: 20

```
stdout line 1
stdout line 2
stdout line 3
stdout line 4
stdout line 5
stdout line 6
stdout line 7
stdout line 8
stdout line 9
stdout line 10
stdout line 11
stdout line 12
stdout line 13
stdout line 14
stdout line 15
stdout line 16
stdout line 17
stdout line 18
stdout line 19
stdout line 20
```
