crates/forge_app/src/snapshots/forge_app__operation__tests__shell_output_no_truncation.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Shell Output

- **Command**: Echo hello
- **Shell**: /bin/bash
- **Exit Code**: 0

## Stdout

- **Total Lines**: 2

```
hello
world
```
