crates/forge_app/src/snapshots/forge_app__operation__tests__shell_output_single_line_each.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Shell Output

- **Command**: Simple_command
- **Shell**: /bin/bash
- **Exit Code**: 0

## Stdout

- **Total Lines**: 1

```
single stdout line
```

## Stderr

- **Total Lines**: 1

```
single stderr line
```
