crates/forge_app/src/snapshots/forge_app__operation__tests__shell_success.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Shell Output

- **Command**: Ls -la
- **Shell**: /bin/bash
- **Exit Code**: 0

## Stdout

- **Total Lines**: 3

```
total 8
drwxr-xr-x  2 user user 4096 Jan  1 12:00 .
drwxr-xr-x 10 user user 4096 Jan  1 12:00 ..
```
