crates/forge_app/src/snapshots/forge_app__operation__tests__shell_with_description.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Shell Output

- **Command**: Git status
- **Shell**: /bin/bash
- **Description**: Shows working tree status
- **Exit Code**: 0

## Stdout

- **Total Lines**: 2

```
On branch main
nothing to commit, working tree clean
```
