crates/forge_app/src/snapshots/forge_app__operation__tests__task_list_append_operation.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<task_list
  total_tasks="2"
  pending_tasks="2"
  in_progress_tasks="0"
  done_tasks="0"
>
<task
  id="1"
  status="PENDING"
><![CDATA[Existing task]]>
</task>
<task
  id="2"
  status="PENDING"
><![CDATA[New task from append]]>
</task>
</task_list>
